--- a/WabiSabiTeamProject/Feature/AddRoutine/View/AddRoutine.storyboard
+++ b/WabiSabiTeamProject/Feature/AddRoutine/View/AddRoutine.storyboard
@@ -122,7 +122,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="tintColor" name="ColorPrimary"/>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="&lt; Back"/>
+                                <buttonConfiguration key="configuration" style="plain" image="chevron.left" catalog="system" title="Back"/>
                                 <connections>
                                     <action selector="backButtonPressed:" destination="YqF-f5-mFH" eventType="touchUpInside" id="6hF-nS-dbV"/>
                                 </connections>
@@ -228,6 +228,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="chevron.left" catalog="system" width="96" height="128"/>
         <image name="info.circle" catalog="system" width="128" height="121"/>
         <image name="ovalBackground" width="182" height="227"/>
         <namedColor name="ColorCream">
