--- a/WabiSabiTeamProject/Feature/Explore/View/Explore.storyboard
+++ b/WabiSabiTeamProject/Feature/Explore/View/Explore.storyboard
@@ -904,30 +904,27 @@
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="ovalBackground" translatesAutoresizingMaskIntoConstraints="NO" id="d8i-w5-p67">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ovalBackground" translatesAutoresizingMaskIntoConstraints="NO" id="d8i-w5-p67">
                                 <rect key="frame" x="165" y="50" width="250" height="250"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="250" id="gem-Lw-L09"/>
                                     <constraint firstAttribute="width" constant="250" id="tno-UK-mRz"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="New Habit" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AfQ-ou-Eep">
-                                <rect key="frame" x="15" y="93" width="360" height="40"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="40" id="GrU-nD-5nl"/>
-                                </constraints>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="New Habit" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AfQ-ou-Eep">
+                                <rect key="frame" x="15" y="93" width="360" height="40.666666666666657"/>
                                 <fontDescription key="fontDescription" name="SFProRounded-Bold" family="SF Pro Rounded" pointSize="34"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="752" text="Add your own customize new habit!" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BQ3-mj-WnG">
-                                <rect key="frame" x="15" y="137" width="360" height="20.333333333333343"/>
+                                <rect key="frame" x="15" y="137.66666666666666" width="360" height="20.333333333333343"/>
                                 <fontDescription key="fontDescription" name="SFProRounded-Regular" family="SF Pro Rounded" pointSize="17"/>
                                 <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tVX-NI-uMg">
-                                <rect key="frame" x="0.0" y="175.33333333333331" width="390" height="634.66666666666674"/>
+                                <rect key="frame" x="0.0" y="176" width="390" height="634"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Routine details" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lxp-WE-d0h">
                                         <rect key="frame" x="20" y="20" width="148.66666666666666" height="26.333333333333329"/>
@@ -936,7 +933,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="GTe-Z3-bxU">
-                                        <rect key="frame" x="15" y="58.333333333333314" width="360" height="566.33333333333348"/>
+                                        <rect key="frame" x="15" y="58.333333333333314" width="360" height="565.66666666666674"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </tableView>
                                 </subviews>
@@ -964,6 +961,7 @@
                             <constraint firstItem="lwk-Wp-hO7" firstAttribute="bottom" secondItem="tVX-NI-uMg" secondAttribute="bottom" id="oeT-18-S1F"/>
                             <constraint firstItem="tVX-NI-uMg" firstAttribute="top" secondItem="BQ3-mj-WnG" secondAttribute="bottom" constant="18" id="rAo-aM-TSc"/>
                             <constraint firstItem="AfQ-ou-Eep" firstAttribute="leading" secondItem="lwk-Wp-hO7" secondAttribute="leading" constant="15" id="tit-zU-n17"/>
+                            <constraint firstItem="d8i-w5-p67" firstAttribute="top" secondItem="VzB-jj-Xdw" secondAttribute="top" constant="50" id="wcy-iT-TUg"/>
                             <constraint firstAttribute="trailing" secondItem="d8i-w5-p67" secondAttribute="trailing" constant="-25" id="wry-82-617"/>
                         </constraints>
                     </view>
