--- a/WabiSabiTeamProject/Feature/LaunchScreen/View/Base.lproj/LaunchScreen.storyboard
+++ b/WabiSabiTeamProject/Feature/LaunchScreen/View/Base.lproj/LaunchScreen.storyboard
@@ -18,6 +18,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Splash" id="2jD-R0-E4Y">
+                                <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Oval" translatesAutoresizingMaskIntoConstraints="NO" id="2fc-nZ-4RO">
                                 <rect key="frame" x="-49.666666666666657" y="427.66666666666674" width="489.33333333333326" height="489"/>
                             </imageView>
@@ -67,6 +71,7 @@
     </scenes>
     <resources>
         <image name="Oval" width="489" height="489"/>
+        <image name="Splash" width="375" height="812"/>
         <namedColor name="ColorCream">
             <color red="0.88999998569488525" green="0.80800002813339233" blue="0.77300000190734863" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
