Fixing Ui biar cantinas

--- a/WabiSabiTeamProject/Feature/Activity/View/ProgressIndicatorHorizontalCollectionViewCell.xib
+++ b/WabiSabiTeamProject/Feature/Activity/View/ProgressIndicatorHorizontalCollectionViewCell.xib
@@ -49,7 +49,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <color key="backgroundColor" systemColor="systemGray5Color"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="117" id="09N-eP-Nhk"/>
                                     <constraint firstItem="tUj-Pe-g0c" firstAttribute="firstBaseline" secondItem="pYc-3b-dEI" secondAttribute="baseline" constant="25" id="GVb-C5-4ka"/>
@@ -85,8 +85,8 @@
         </collectionViewCell>
     </objects>
     <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        <systemColor name="systemGray5Color">
+            <color red="0.89803921568627454" green="0.89803921568627454" blue="0.91764705882352937" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemGreenColor">
             <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
